# test-repo

./: Dockerfile  fail.py  gg.py  package-lock.json  package-lock2.json  package.json  requirements.txt  sample.py  stress_test_command_injection_20250814_120313.py  stress_test_command_injection_20250814_121435.py  stress_test_command_injection_20250814_171120.py  stress_test_config_20250814_120245.yml  stress_test_config_20250814_153607.yml  stress_test_secrets_20250814_120424.py  stress_test_secrets_20250817_151410.py  stress_test_sql_vulnerabilities_20250814_120417.py  stress_test_sql_vulnerabilities_20250814_134100.py  stress_test_sql_vulnerabilities_20250814_153513.py  stress_test_vulnerabilities_20250814_115502.py  stress_test_vulnerabilities_20250814_120355.py  stress_test_vulnerabilities_20250814_134100.py  stress_test_vulnerabilities_20250814_153513.py  test.json  test.py  test22.py  testggg.py  tomer2.py  tomer4.py  vulnerable_code_01.py  vulnerable_code_09.py  vulnerable_code_17.py  vulnerable_code_28.py  vulnerable_code_37.py  xx.py
.github/workflows/: docker-build.yml
.jit/: jit-config.yml  jit-plan.yml
internal-dir/: README2.md  kubernetes.yaml  nuget.csproj  package.json  pyproject.toml  requirements.txt  secrets.txt  semgrep.cs  semgrep.js  semgrep.kt  semgrep.py  semgrep.rb  semgrep.rs  semgrep.scala  semgrep.swift
internal-dir/licenses/: package.json
