[tool.poetry]
name = "test"
version = "1.0.0"
description = "Test"
authors = ["OpenAPI Generator Community <team@openapitools.org>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "Echo Server API"]
include = ["openapi_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

aiogram = "3.0.0b6"
